fix: svgs collapsing in focal point wrapper

--- a/blocks/edit/da-editor/da-editor.css
+++ b/blocks/edit/da-editor/da-editor.css
@@ -927,9 +927,7 @@ da-diff-deleted, da-diff-added {
 /* Wrapper for images with focal point overlay */
 .focal-point-image-wrapper {
   position: relative;
-  display: inline-block;
-  line-height: 0;
-  vertical-align: bottom;
+  display: block;
 }
 
 .focal-point-image-wrapper img {
